defining features and spliting data into train adn test set

--- a/Starbucks_Capstone_notebook.ipynb
+++ b/Starbucks_Capstone_notebook.ipynb
@@ -3402,6 +3402,595 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Modeling\n",
+    "\n",
+    "for this part, we will model and evaluate differnt Models perfomances, in this case i will use accuracy a hte metric. Accuracy is most applicable for this case since it is a classification probelm and it shows how eell our model predicted "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 291,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['person', 'event', 'time', 'offer_id', 'amount', 'reward_x',\n",
+       "       'offer_type', 'reward_y', 'difficulty', 'duration', 'email', 'mobile',\n",
+       "       'social', 'web', 'discount', 'informational', 'gender', 'age', 'income',\n",
+       "       'gend_M', 'gend_O', 'membership_days', 'age_group', 'income_range'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 291,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_df.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The important features for our modeling work are:\n",
+    "- time\n",
+    "- offer_id\n",
+    "- amount\n",
+    "- reward_x\n",
+    "- offer_type\n",
+    "- reward_y\n",
+    "- dificulty\n",
+    "- duration\n",
+    "- gender\n",
+    "- age_group\n",
+    "- income_range\n",
+    "- membership_days\n",
+    "\n",
+    "we will target the event wchih can be either of the two <b> offer completed </b><b>or offer viewed</b>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First I will encode the columns with object dtype with numericical values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 294,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "person               object\n",
+       "event                object\n",
+       "time                  int64\n",
+       "offer_id             object\n",
+       "amount                int64\n",
+       "reward_x              int64\n",
+       "offer_type           object\n",
+       "reward_y              int64\n",
+       "difficulty            int64\n",
+       "duration              int64\n",
+       "email                 int64\n",
+       "mobile                int64\n",
+       "social                int64\n",
+       "web                   int64\n",
+       "discount              int64\n",
+       "informational         int64\n",
+       "gender               object\n",
+       "age                 float64\n",
+       "income              float64\n",
+       "gend_M              float64\n",
+       "gend_O              float64\n",
+       "membership_days     float64\n",
+       "age_group          category\n",
+       "income_range       category\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 294,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 310,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>person</th>\n",
+       "      <th>event</th>\n",
+       "      <th>time</th>\n",
+       "      <th>offer_id</th>\n",
+       "      <th>amount</th>\n",
+       "      <th>reward_x</th>\n",
+       "      <th>offer_type</th>\n",
+       "      <th>reward_y</th>\n",
+       "      <th>difficulty</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>...</th>\n",
+       "      <th>informational</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>age</th>\n",
+       "      <th>income</th>\n",
+       "      <th>gend_M</th>\n",
+       "      <th>gend_O</th>\n",
+       "      <th>membership_days</th>\n",
+       "      <th>age_group</th>\n",
+       "      <th>income_range</th>\n",
+       "      <th>event_cat</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>389bc3fa690240e798340f5a15918d5c</td>\n",
+       "      <td>offer viewed</td>\n",
+       "      <td>0</td>\n",
+       "      <td>b4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>bogo</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>M</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>53000.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>167.0</td>\n",
+       "      <td>senior_citizens</td>\n",
+       "      <td>low</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>d1ede868e29245ea91818a903fec04c6</td>\n",
+       "      <td>offer viewed</td>\n",
+       "      <td>0</td>\n",
+       "      <td>info_2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>informational</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>O</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>52000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>313.0</td>\n",
+       "      <td>adult</td>\n",
+       "      <td>low</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>102e9454054946fda62242d2e176fdce</td>\n",
+       "      <td>offer viewed</td>\n",
+       "      <td>0</td>\n",
+       "      <td>b2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>bogo</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>F</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>57000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>711.0</td>\n",
+       "      <td>senior_citizens</td>\n",
+       "      <td>low</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>02c083884c7d45b39cc68e1314fec56c</td>\n",
+       "      <td>offer viewed</td>\n",
+       "      <td>0</td>\n",
+       "      <td>b1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>bogo</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>7</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>F</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>30000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>745.0</td>\n",
+       "      <td>teenager</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>be8a5d1981a2458d90b255ddc7e0d174</td>\n",
+       "      <td>offer viewed</td>\n",
+       "      <td>0</td>\n",
+       "      <td>info_2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>informational</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>M</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>51000.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1521.0</td>\n",
+       "      <td>adult</td>\n",
+       "      <td>low</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             person         event  time offer_id  amount  \\\n",
+       "0  389bc3fa690240e798340f5a15918d5c  offer viewed     0       b4       0   \n",
+       "1  d1ede868e29245ea91818a903fec04c6  offer viewed     0   info_2       0   \n",
+       "2  102e9454054946fda62242d2e176fdce  offer viewed     0       b2       0   \n",
+       "3  02c083884c7d45b39cc68e1314fec56c  offer viewed     0       b1       0   \n",
+       "4  be8a5d1981a2458d90b255ddc7e0d174  offer viewed     0   info_2       0   \n",
+       "\n",
+       "   reward_x     offer_type  reward_y  difficulty  duration  ...  \\\n",
+       "0         0           bogo         5           5         5  ...   \n",
+       "1         0  informational         0           0         3  ...   \n",
+       "2         0           bogo        10          10         5  ...   \n",
+       "3         0           bogo        10          10         7  ...   \n",
+       "4         0  informational         0           0         3  ...   \n",
+       "\n",
+       "   informational  gender   age   income  gend_M  gend_O membership_days  \\\n",
+       "0              0       M  65.0  53000.0     1.0     0.0           167.0   \n",
+       "1              1       O  53.0  52000.0     0.0     1.0           313.0   \n",
+       "2              0       F  69.0  57000.0     0.0     0.0           711.0   \n",
+       "3              0       F  20.0  30000.0     0.0     0.0           745.0   \n",
+       "4              1       M  39.0  51000.0     1.0     0.0          1521.0   \n",
+       "\n",
+       "         age_group  income_range  event_cat  \n",
+       "0  senior_citizens           low          1  \n",
+       "1            adult           low          1  \n",
+       "2  senior_citizens           low          1  \n",
+       "3         teenager           NaN          1  \n",
+       "4            adult           low          1  \n",
+       "\n",
+       "[5 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 310,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "#label econder instance\n",
+    "lbl_encoder = LabelEncoder()\n",
+    "\n",
+    "# df containing interest features\n",
+    "# interest_df = merged_df[['event', 'offer_type', 'gender', 'age_group', 'income_rannge\n",
+    "\n",
+    "merged_df['event_cat'] = lbl_encoder.fit_transform(merged_df['event'])\n",
+    "merged_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 316,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#drop rows with NaN values\n",
+    "merged_df.dropna(axis=0, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 335,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_df['offer_type_cat'] = lbl_encoder.fit_transform(merged_df['offer_type'])\n",
+    "merged_df['gender_cat'] = lbl_encoder.fit_transform(merged_df['gender'])\n",
+    "merged_df['age_group_cat'] = lbl_encoder.fit_transform(merged_df['age_group'])\n",
+    "merged_df['income_range_cat'] = lbl_encoder.fit_transform(merged_df['income_range'])\n",
+    "merged_df['offer_id_cat'] = lbl_encoder.fit_transform(merged_df['offer_id'])\n",
+    "merged_df['event_cat'] = lbl_encoder.fit_transform(merged_df['event'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 336,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Spliting data into features and target label\n",
+    "X = merged_df[['time', 'offer_id_cat', 'amount', 'reward_x', \n",
+    "               'offer_type_cat', 'reward_y', 'reward_y', 'difficulty', \n",
+    "               'duration', 'gender_cat', 'age_group_cat', 'income_range_cat', 'membership_days']]\n",
+    "y = merged_df['event_cat']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 337,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>offer_id_cat</th>\n",
+       "      <th>amount</th>\n",
+       "      <th>reward_x</th>\n",
+       "      <th>offer_type_cat</th>\n",
+       "      <th>reward_y</th>\n",
+       "      <th>reward_y</th>\n",
+       "      <th>difficulty</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>gender_cat</th>\n",
+       "      <th>age_group_cat</th>\n",
+       "      <th>income_range_cat</th>\n",
+       "      <th>membership_days</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>167.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>313.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>711.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1521.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>921.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   time  offer_id_cat  amount  reward_x  offer_type_cat  reward_y  reward_y  \\\n",
+       "0     0             3       0         0               0         5         5   \n",
+       "1     0             9       0         0               2         0         0   \n",
+       "2     0             1       0         0               0        10        10   \n",
+       "4     0             9       0         0               2         0         0   \n",
+       "5     0             7       0         0               1         2         2   \n",
+       "\n",
+       "   difficulty  duration  gender_cat  age_group_cat  income_range_cat  \\\n",
+       "0           5         5           1              1                 2   \n",
+       "1           0         3           2              0                 2   \n",
+       "2          10         5           0              1                 2   \n",
+       "4           0         3           1              0                 2   \n",
+       "5          10         7           1              0                 1   \n",
+       "\n",
+       "   membership_days  \n",
+       "0            167.0  \n",
+       "1            313.0  \n",
+       "2            711.0  \n",
+       "4           1521.0  \n",
+       "5            921.0  "
+      ]
+     },
+     "execution_count": 337,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 341,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     1\n",
+       "1     1\n",
+       "2     1\n",
+       "4     1\n",
+       "5     1\n",
+       "6     0\n",
+       "7     1\n",
+       "8     1\n",
+       "9     1\n",
+       "12    1\n",
+       "13    1\n",
+       "14    1\n",
+       "16    1\n",
+       "Name: event_cat, dtype: int64"
+      ]
+     },
+     "execution_count": 341,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.head(13)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 343,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "# training and testing sets\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 345,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Accuracy score calcualtion\n",
+    "def model_score(model):\n",
+    "    pred = model.predict(X_test)\n",
+    "    errors = abs(pred - y_test)\n",
+    "    \n",
+    "    # MAE calculation in percentage\n",
+    "    MAE_perc = 100 * (errors / y_test)\n",
+    "    accuracy = 100 - np.mean(MAE_perc)\n",
+    "    \n",
+    "    return round(accuracy, 5)\n",
+    "    "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
