--- a/Starbucks_Capstone_notebook.ipynb
+++ b/Starbucks_Capstone_notebook.ipynb
@@ -3492,7 +3492,9 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -3703,6 +3705,27 @@
    ],
    "source": [
     "merged_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-154-aedd92f1660e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmerged_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: 'tuple' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "merged_dfd_df.shape()"
    ]
   },
   {
@@ -4650,7 +4673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -4670,7 +4693,41 @@
       "[CV 5/5] END ...................C=0.1, gamma=0.1, kernel=rbf; total time= 5.0min\n",
       "[CV 1/5] END .................C=0.1, gamma=0.001, kernel=rbf; total time= 5.6min\n",
       "[CV 2/5] END .................C=0.1, gamma=0.001, kernel=rbf; total time= 5.4min\n",
-      "[CV 3/5] END .................C=0.1, gamma=0.001, kernel=rbf; total time= 4.7min\n"
+      "[CV 3/5] END .................C=0.1, gamma=0.001, kernel=rbf; total time= 4.7min\n",
+      "[CV 4/5] END .................C=0.1, gamma=0.001, kernel=rbf; total time= 5.4min\n",
+      "[CV 5/5] END .................C=0.1, gamma=0.001, kernel=rbf; total time= 5.4min\n",
+      "[CV 1/5] END .......................C=1, gamma=1, kernel=rbf; total time= 5.9min\n",
+      "[CV 2/5] END .......................C=1, gamma=1, kernel=rbf; total time= 5.9min\n",
+      "[CV 3/5] END .......................C=1, gamma=1, kernel=rbf; total time= 5.0min\n",
+      "[CV 4/5] END .......................C=1, gamma=1, kernel=rbf; total time= 5.0min\n",
+      "[CV 5/5] END .......................C=1, gamma=1, kernel=rbf; total time= 5.0min\n",
+      "[CV 1/5] END .....................C=1, gamma=0.1, kernel=rbf; total time= 4.5min\n",
+      "[CV 2/5] END .....................C=1, gamma=0.1, kernel=rbf; total time= 4.5min\n",
+      "[CV 3/5] END .....................C=1, gamma=0.1, kernel=rbf; total time= 5.2min\n",
+      "[CV 4/5] END .....................C=1, gamma=0.1, kernel=rbf; total time= 5.3min\n",
+      "[CV 5/5] END .....................C=1, gamma=0.1, kernel=rbf; total time= 5.4min\n",
+      "[CV 1/5] END ...................C=1, gamma=0.001, kernel=rbf; total time= 5.2min\n",
+      "[CV 2/5] END ...................C=1, gamma=0.001, kernel=rbf; total time= 5.1min\n",
+      "[CV 3/5] END ...................C=1, gamma=0.001, kernel=rbf; total time= 5.0min\n",
+      "[CV 4/5] END ...................C=1, gamma=0.001, kernel=rbf; total time= 5.1min\n",
+      "[CV 5/5] END ...................C=1, gamma=0.001, kernel=rbf; total time= 5.1min\n",
+      "[CV 1/5] END ......................C=10, gamma=1, kernel=rbf; total time= 6.1min\n",
+      "[CV 2/5] END ......................C=10, gamma=1, kernel=rbf; total time= 5.8min\n",
+      "[CV 3/5] END ......................C=10, gamma=1, kernel=rbf; total time= 5.7min\n",
+      "[CV 4/5] END ......................C=10, gamma=1, kernel=rbf; total time= 5.8min\n",
+      "[CV 5/5] END ......................C=10, gamma=1, kernel=rbf; total time= 5.9min\n",
+      "[CV 1/5] END ....................C=10, gamma=0.1, kernel=rbf; total time= 4.9min\n",
+      "[CV 2/5] END ....................C=10, gamma=0.1, kernel=rbf; total time= 4.8min\n",
+      "[CV 3/5] END ....................C=10, gamma=0.1, kernel=rbf; total time= 4.6min\n",
+      "[CV 4/5] END ....................C=10, gamma=0.1, kernel=rbf; total time= 4.6min\n",
+      "[CV 5/5] END ....................C=10, gamma=0.1, kernel=rbf; total time= 4.8min\n",
+      "[CV 1/5] END ..................C=10, gamma=0.001, kernel=rbf; total time= 4.7min\n",
+      "[CV 2/5] END ..................C=10, gamma=0.001, kernel=rbf; total time= 4.7min\n",
+      "[CV 3/5] END ..................C=10, gamma=0.001, kernel=rbf; total time= 4.6min\n",
+      "[CV 4/5] END ..................C=10, gamma=0.001, kernel=rbf; total time= 4.6min\n",
+      "[CV 5/5] END ..................C=10, gamma=0.001, kernel=rbf; total time= 4.7min\n",
+      "Accuracy of grid on testing data: 64.5335%.\n",
+      "prediction Accuracy: 64.18143645329818%\n"
      ]
     }
    ],
@@ -4690,36 +4747,6 @@
     "\n",
     "grid_preds = grid.predict(X_test)\n",
     "print(f'prediction Accuracy: {accuracy_score(y_test, grid_preds)* 100}%')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(f'Accuracy of grid on testing data: {round(grid.score(X_train, y_train)* 100, 4)}%.')\n",
-    "print(f'prediction Accuracy: {accuracy_score(y_test, grid_preds)* 100}%')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# creating the variables that will be used to fill the results table\n",
-    "models = [svm, DT, gnb, knn, grid]\n",
-    "model_names = [type(n).__name__ for n in models]\n",
-    "training_accuracy = [x.score(X_train, y_train)*100 for x in models]\n",
-    "predection_accuracy = [accuracy_score(y) for y in models]\n",
-    "\n",
-    "# structuring a table to view the results of the different model tried above\n",
-    "results = [training_accuracy, predection_accuracy]\n",
-    "results_df = pd.DataFrame(results, columns = model_names, index=['Training Accuracy', 'Predicting Accuracy'])\n",
-    "\n",
-    "# show the results dataframe \n",
-    "results_df"
    ]
   },
   {
